# socli

./: .all-contributorsrc  .gitignore  .travis.yml  =27.3  CHANGELOG.rst  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Portfile  README.md  README.rst  SECURITY.md  Translation_guide.md  Translation_guide.txt  changelog.md  circle.yml  deploy-check.py  formula-changes.patch  publish-brew-formula.sh  pypi-readme.txt  pyproject.toml  requirements.txt  rme.rst  setup.py  socli.1
.github/: FUNDING.yml  config.yml
.github/ISSUE_TEMPLATE/: bug.md  documentation.md  feature.md  proposal.md
.github/workflows/: CodeQL.yml  greetings.yml  publish.yml  python.yml  test.yml
socli/: __main__.py  auth.py  parser.py  print.py  printer.py  search.py  sentry.py  socli.pot  socli.py  test.py  tui.py  user.py  user_agents.txt  user_agents_working.txt  version.py
socli/legacy/: o_socli.py  o_test_socli.py
socli/locale/: socli.pot
socli/locale/es_AR/LC_MESSAGES/: socli.mo  socli.po
socli/tests/: test_socli.py
tests/: .test_socli.py.swp  __init__.py  test_socli.py
